--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
     "dotenv": "^16.4.5",
     "express": "^4.18.3",
     "mongodb": "^6.4.0",
-    "mongoose": "^8.2.0"
+    "mongoose": "^8.2.0",
+    "swagger-ui-express": "^5.0.0",
+    "yamljs": "^0.3.0"
   }
 }
