--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "express": "^4.18.3",
     "mongodb": "^6.4.0",
     "mongoose": "^8.2.0",
+    "swagger-jsdoc": "^6.2.8",
     "swagger-ui-express": "^5.0.0",
     "yamljs": "^0.3.0"
   }
